# luizbraga_baseapiapp

./: .gitignore  boot_django.py  makemigrations.py  requirements.txt  setup.cfg  setup.py
luizbraga_baseapi/: apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
luizbraga_baseapi/migrations/: 0001_initial.py
sampleproject/sampleproject/: settings.py
