[metadata]
name = luizbraga_baseapi
version = 0.0.3
description = A base API sets to django app
long_description = file:README.md
url = https://github.com/btmluiz/luizbraga_baseapiapp
license = MIT
classifiers =
    Development Status :: 1 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: OS Independent
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Application Frameworks
    Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = true
python_requires = >=3.8
setup_requires =
    setuptools >= 38.3.0
install_requires =
    Django>=3.2.4
    uuid>=1.30
    djangorestframework>=3.12.4